--- a/_sass/components/_details.scss
+++ b/_sass/components/_details.scss
@@ -25,8 +25,10 @@ summary {
   transition: background-color var(--duration) ease,
     border-radius var(--duration) ease;
 
-  &:hover {
-    background-color: var(--color-background-hover);
+  @media (hover: hover) {
+    &:hover {
+      background-color: var(--color-background-hover);
+    }
   }
 
   &::before {
